Settings: Fix various flickers (follow-up)

--- a/src/components/left/settings/Settings.scss
+++ b/src/components/left/settings/Settings.scss
@@ -97,6 +97,11 @@
 
 .settings-content-icon {
   margin-bottom: 2.5rem;
+
+  &.opacity-transition:not(.shown) {
+    display: block;
+    visibility: hidden;
+  }
 }
 
 .settings-main-menu-premium .PremiumIcon {
